--- a/styles/slicknav.css
+++ b/styles/slicknav.css
@@ -1,6 +1,4 @@
-/*
-    Mobile Menu Core Style
-*/
+/*Mobile Menu Core Style*/
 
 .slicknav_btn {
 	position: relative;
@@ -66,17 +64,12 @@
 }
 /* IE6/7 support */
 .slicknav_menu {
-*zoom: 1
+	*zoom: 1
 }
-/* 
-    User Default Style
-    Change the following styles to modify the appearance of the menu.
-*/
-
 .slicknav_menu {
 	font-size: 16px;
 }
-/* Button */
+
 .slicknav_btn {
 	margin: 5px 5px 6px;
 	text-decoration: none;
@@ -86,13 +79,13 @@
 	border-radius: 4px;
 	background-color: #222222;
 }
-/* Button Text */
+
 .slicknav_menu .slicknav_menutxt {
 	color: #FFF;
 	font-weight: bold;
 	text-shadow: 0 1px 3px #000;
 }
-/* Button Lines */
+
 .slicknav_menu .slicknav_icon-bar {
 	background-color: #f5f5f5;
 }
